Cabal/tests/ParserTests/errors/range-ge-wild.cabal
name:                range-ge-wild
version:             0
synopsis:            Wild range after non-== op
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends: base >= 4.*
